Finish 'how it works' page and fix links to all pages

--- a/extra_pages/how_it_works.html
+++ b/extra_pages/how_it_works.html
@@ -12,6 +12,39 @@
     <body>
 
 
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="../img/Logo.png" alt="Logo" class="logo">
+                </a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html" style="font-size: 14px;" target="_blank">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about:blank" style="font-size: 14px;">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about:blank" style="font-size: 14px;">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="how_it_works.html" style="font-size: 14px;">How it Works</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about:blank" style="font-size: 14px;">Support</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="ms-auto">
+                    <a href="./sign_in.html" target="_blank"><button class="signin-btn" type="Sign_in">Sign In</button></a>
+                <button class="free-btn" type="Try_it_free">Try it Free</button>                
+
+                </div>
+            </div>
+        </nav>
+
+
 
 <!-- Start: Focus on your business section -->
 
@@ -24,10 +57,10 @@
         <p>Subscription Billing, powered with revenue retention tools and a
             seamless customer exerience - without the technical hurdles.</p>
         <div class="focustextbuttons">
-            <a href="./extra_pages/sign_up.html" target="_blank"><button id="focussignup">Sign Up Free  >></button></a>
+            <a href="sign_up.html" target="_blank"><button id="focussignup">Sign Up Free  >></button></a>
             <a href="#" target="_blank"><button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button></a>
         </div>
-        <p>Already using <b>Double</b>Tap? <a href="./extra_pages/sign_in.html" target="_blank"><b>Sign In</b></a></p>
+        <p>Already using <b>Double</b>Tap? <a href="sign_in.html" target="_blank"><b>Sign In</b></a></p>
         <div class="focusdetails">
             <p>Free 14 day trial</p>
             <div class="circle"></div>
@@ -65,6 +98,108 @@
 <!-- End: Focus on your business section -->
 
 
+<div class="container mb-5">
+    <div class="row">
+        <div class="col-12 mt-3 mb-5 d-flex justify-content-center">
+            <div class="w-75 h-1 border-top border-secondary"></div>
+        </div>
+        <div class="col-12 mb-2">
+            <h3 class="text-center fw-bold">How It Works</h3>
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+            <div class="w-75 lorem_dummy_cont"><p class="text-center lorem_dummy1"> Lorem Ipsum is simply dummy test of the printing andtypesetting industry. Lorem Ipsum has been the industry's standard dummy test ever since the 1500s, when an unknown printer took a gally of type and scrambled it to make a</p></div>
+        </div>
+    </div>
+</div>
+
+<div class="row mx-5">
+    <div class="col-12">
+        <div class="card mb-3 " id="credit_cont">
+            <div class="row g-0">
+              <div class="col-md-4 credit_card_right d-flex align-items-center justify-content-center">
+                <div class="credit_img_cont"><img src="../img/Collect-info.png" class="img-fluid rounded-start" alt="cartoon of  aman holding a credit card"></div>
+              </div>
+              <div class="col-md-8" id="credit_card_right">
+                <div class="card-body">
+                  <h5 class="card-title fs-3 top_right_cr pb-4">Collect Useful Info</h5>
+                  <p class="card-text fs-6 pb-5 middle_right_cr">Deliver the world of payment options and seamless checkout experiences, making it easy for your customers to pay you for your products and services.</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+</div>
+
+
+<div class="container mt-5 mb-5 pt-5">
+    <div class="row">
+        <div class="col-12 d-flex justify-content-center">
+            <div class="w-75 lorem_dummy_cont"><p class="text-center lorem_dummy1"> Lorem Ipsum is simply dummy test of the printing andtypesetting industry. Lorem Ipsum has been the industry's standard dummy test ever since the 1500s, when an unknown printer took a gally of type and scrambled it to make a</p></div>
+        </div>
+    </div>
+</div>
+
+<div class="row mx-5 mb-5">
+    <div class="col-12">
+        <div class="card mb-5 " id="credit_cont">
+            <div class="row g-0">
+              <div class="col-md-4 credit_card_right d-flex align-items-center justify-content-center">
+                <div class="credit_img_cont"><img src="../img/Take Payments@2x.png" class="img-fluid rounded-start" alt="cartoon of  aman holding a credit card"></div>
+              </div>
+              <div class="col-md-8" id="credit_card_right">
+                <div class="card-body">
+                  <h5 class="card-title fs-3 top_right_cr pb-4">Get Paid Sooner</h5>
+                  <p class="card-text fs-6 pb-5 middle_right_cr">Lorem Ipsum is simply dummy test of the printing andtypesetting industry. Lorem Ipsum has been the industry's standard dummy test ever since the 1500s, when an unknown printer took a gally of type and scrambled it to make a type specimen book. It has survived not only five centures, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+</div>
+
+
+<!--End of how it works section-->
+
+
+<div class="footer">
+    <div>
+        <h1 class="font-weight-bold">Try Double Tap Today!</h1>
+    </div>
+    <div>
+        <h6>Let's Get Started</h6>
+    </div>
+    <div>
+        <button class="get-started-btn" type="Sign_in">
+            <div class="row">
+                <div class="col-9 d-flex align-items-center">
+                    <span>Get Started!</span>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-end">
+                    <img src="../img/right-arrows.png" alt="arrow-icon" class="img-fluid" style="width: 15px; height: 15px;">
+                </div>
+            </div>
+        </button>
+        <button class="btn btn-primary chat-with-us-btn" type="chat-with-us">
+            <div class="row">
+                <div class="col-3 d-flex align-items-center justify-content-end">
+                    <img src="../img/chat_bubble.png" alt="chat-icon" class="img-fluid" style="width: 25px; height: 25px;">
+                </div>
+                <div class="col-9 d-flex align-items-center">
+                    <span>Chat With Us!</span>
+                </div>
+            </div>
+        </button>
+    </div>
+    <div>
+        <a href="about:blank" target="_blank" style="font-size: 12px;">Free 14 Day Trial</a>
+        <img src="../img/white-circle.png" alt="separator_image" style="width: 10px; height: 10px;">
+        <a href="about:blank" target="_blank" style="font-size: 12px;">Manage Customers in Minutes</a>
+        <img src="../img/white-circle.png" alt="separator_image" style="width: 10px; height: 10px;">
+        <a href="about:blank" target="_blank" style="font-size: 12px;">Cancel at Anytime</a>
+    </div>
+</div>
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
