--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="about:blank" style="font-size: 14px;">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./extra_pages/how_it_works.html" style="font-size: 14px;">How it Works</a>
+                            <a class="nav-link" href="./extra_pages/how_it_works.html" target="_blank" style="font-size: 14px;">How it Works</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about:blank" style="font-size: 14px;">Support</a>
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
                 <div class="ms-auto">
-                    <button class="signin-btn" type="Sign_in">Sign In</button>
+                    <a href="./extra_pages/sign_in.html" target="_blank"><button class="signin-btn" type="Sign_in">Sign In</button></a>
                 <button class="free-btn" type="Try_it_free">Try it Free</button>                
 
                 </div>
